--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-schema-form": "^0.9.10",
+    "react-scripts": "3.4.3",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
